make auth module perfect for swager
