# backend/src/auth/dto/login.dto.ts
@@ -1,30 +1,12 @@
-import { IsEmail, IsString, MinLength, MaxLength } from 'class-validator';
 import { ApiProperty } from '@nestjs/swagger';
+import { IsEmail, MinLength } from 'class-validator';
 
 export class LoginDto {
-  @ApiProperty({
-    description: 'User email address',
-    example: 'user@example.com',
-    maxLength: 50,
-    minLength: 5,
-    type: 'string',
-    format: 'email',
-  })
+  @ApiProperty({ example: 'user@example.com' })
   @IsEmail()
-  @MaxLength(50)
-  @MinLength(5)
   email: string;
 
-  @ApiProperty({
-    description: 'User password',
-    example: 'strongPass123',
-    minLength: 6,
-    maxLength: 100,
-    type: 'string',
-    format: 'password',
-  })
-  @IsString()
+  @ApiProperty({ example: 'password123' })
   @MinLength(6)
-  @MaxLength(100)
   password: string;
 }
