# backend/src/auth/dto/message-response.dto.ts
@@ -1,0 +1,5 @@
+import { ApiProperty } from '@nestjs/swagger';
+export class MessageResponseDto {
+  @ApiProperty({ example: 'Operation successful' })
+  message: string;
+}
